--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
     "expo-linear-gradient": "~8.4.0",
+    "expo-notifications": "~0.8.2",
+    "expo-permissions": "~10.0.0",
     "moment": "^2.24.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
